--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -13,6 +13,7 @@
     tools:showIn="@layout/activity_main"
     tools:context="mobile.alibaba.olen.com.trunk.MainActivity">
 
+
     <TextView android:id="@+id/frist_text"
         android:text="FristActivity!"
         android:layout_width="wrap_content"
@@ -23,7 +24,9 @@
         android:layout_height="wrap_content"
         android:text="to_secondary_activity"
         android:layout_below="@+id/frist_text"
+        android:layout_alignParentRight="true"
         android:layout_marginTop="4dp"/>
+
 
     <Button android:id="@+id/star_service"
         android:layout_width="wrap_content"
